Polish of alles

--- a/index.html
+++ b/index.html
@@ -309,129 +309,136 @@
 								</div> <!-- end letter wrapper -->
 							</li>
 
-							<li class="layer" data-depth="-0.3"><h2 class="cases__client">Malmö opera group</h2></li>
+							<li class="layer" data-depth="-0.3">
+								<h2 class="cases__client">
+									Malmö opera group
+								</h2>
+							</li>
 						</ul>
 					</div>
 				</section>
 
 				<section class="case" id="booking-case">
-					<header class="case__header">
 
-						<div class="cases__wrapper">
+					<div class="case__wrapper">
+						<header class="case__header">
 
-							<ul class="cases__wrapper__article">
+							<div class="cases__wrapper">
 
-								<li class="layer" data-depth="-1.00">
-									<h3 class="cases__wrapper__article__text cases__wrapper__article__top-left">booking system  <br /> for Malmös <br /> cultural life.</h3>
-									<h3 class="cases__wrapper__article__text cases__wrapper__article__bottom-right">booking system  <br /> for Malmös <br /> cultural life.</h3>
-								</li>
+								<ul class="cases__wrapper__article">
 
-								<li class="layer layer-index" data-depth="0.50">
-									<h1 class="case__title">Booking System</h1>
-								</li>
+									<li class="layer" data-depth="-1.00">
+										<h3 class="cases__wrapper__article__text cases__wrapper__article__top-left">booking system  <br /> for Malmös <br /> cultural life.</h3>
+										<h3 class="cases__wrapper__article__text cases__wrapper__article__bottom-right">booking system  <br /> for Malmös <br /> cultural life.</h3>
+									</li>
 
-								<li class="layer" data-depth="2.00">
-									<div class="letter-wrapper">
+									<li class="layer layer-index" data-depth="0.50">
+										<h1 class="case__title">Booking System</h1>
+									</li>
 
-										<svg class="letter-wrapper__effect" xmlns="http://www.w3.org/2000/svg" version="1.1">
-											<defs>
-												<filter id="goo">
-													<feGaussianBlur in="SourceGraphic" stdDeviation="10" result="blur" />
-													<feColorMatrix in="blur" mode="matrix" values="1 0 0 0 0  0 1 0 0 0  0 0 1 0 0  0 0 0 19 -9" result="goo" />
-													<feComposite in="SourceGraphic" in2="goo" operator="atop"/>
-												</filter>
-											</defs>
-										</svg>
-										<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-											 viewBox="0 0 376.4 369" style="enable-background:new 0 0 376.4 369;" xml:space="preserve">
+									<li class="layer" data-depth="2.00">
+										<div class="letter-wrapper">
 
-										 <g class="active" id="booking">
-											 <defs>
-												 <pattern patternUnits="userSpaceOnUse" id="image" x="0%" y="0%" height="100%" width="100%"
-																	viewBox="0 0 512 512">
-													 <image x="-90%" y="-1%" width="830" height="500" xlink:href="/orkester.jpg"></image>
-												 </pattern>
-											 </defs>
-											 <g id="Mask">
-												 <path fill="url(#image)" id="path-2_1_" d="M50.4,6h132c15.3,0,30.7,1.1,46.2,3.2s29.4,6.5,41.8,13c12.3,6.5,22.3,15.6,30,27.2
-													 s11.5,27.2,11.5,46.5c0,20-5.6,36.6-16.8,49.8s-25.9,22.6-44.3,28.2v1c11.7,1.7,22.2,4.9,31.8,9.8c9.5,4.8,17.7,11,24.5,18.5
-													 s12.1,16.2,15.8,26.2s5.5,20.7,5.5,32c0,18.7-4,34.2-12,46.8s-18.3,22.6-31,30.2c-12.7,7.7-26.9,13.2-42.8,16.5s-31.6,5-47.2,5
-													 h-145V6z M128.4,147.5h56.5c6,0,11.9-0.7,17.8-2s11.1-3.5,15.8-6.5s8.4-7,11.2-12c2.8-5,4.2-11,4.2-18c0-7.3-1.6-13.4-4.8-18.2
-													 s-7.2-8.6-12.2-11.2s-10.7-4.6-17-5.8S187.4,72,181.4,72h-53V147.5z M128.4,294h70c6,0,12.1-0.7,18.2-2s11.7-3.7,16.8-7
-													 s9.1-7.7,12.2-13s4.8-11.8,4.8-19.5c0-8.3-2.1-15.1-6.2-20.2s-9.4-9.1-15.8-11.8s-13.2-4.5-20.5-5.5s-14.2-1.5-20.5-1.5h-59V294z"
-													 />
+											<svg class="letter-wrapper__effect" xmlns="http://www.w3.org/2000/svg" version="1.1">
+												<defs>
+													<filter id="goo">
+														<feGaussianBlur in="SourceGraphic" stdDeviation="10" result="blur" />
+														<feColorMatrix in="blur" mode="matrix" values="1 0 0 0 0  0 1 0 0 0  0 0 1 0 0  0 0 0 19 -9" result="goo" />
+														<feComposite in="SourceGraphic" in2="goo" operator="atop"/>
+													</filter>
+												</defs>
+											</svg>
+											<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+												 viewBox="0 0 376.4 369" style="enable-background:new 0 0 376.4 369;" xml:space="preserve">
+
+											 <g class="active" id="booking">
+												 <defs>
+													 <pattern patternUnits="userSpaceOnUse" id="image" x="0%" y="0%" height="100%" width="100%"
+																		viewBox="0 0 512 512">
+														 <image x="-90%" y="-1%" width="830" height="500" xlink:href="/orkester.jpg"></image>
+													 </pattern>
+												 </defs>
+												 <g id="Mask">
+													 <path fill="url(#image)" id="path-2_1_" d="M50.4,6h132c15.3,0,30.7,1.1,46.2,3.2s29.4,6.5,41.8,13c12.3,6.5,22.3,15.6,30,27.2
+														 s11.5,27.2,11.5,46.5c0,20-5.6,36.6-16.8,49.8s-25.9,22.6-44.3,28.2v1c11.7,1.7,22.2,4.9,31.8,9.8c9.5,4.8,17.7,11,24.5,18.5
+														 s12.1,16.2,15.8,26.2s5.5,20.7,5.5,32c0,18.7-4,34.2-12,46.8s-18.3,22.6-31,30.2c-12.7,7.7-26.9,13.2-42.8,16.5s-31.6,5-47.2,5
+														 h-145V6z M128.4,147.5h56.5c6,0,11.9-0.7,17.8-2s11.1-3.5,15.8-6.5s8.4-7,11.2-12c2.8-5,4.2-11,4.2-18c0-7.3-1.6-13.4-4.8-18.2
+														 s-7.2-8.6-12.2-11.2s-10.7-4.6-17-5.8S187.4,72,181.4,72h-53V147.5z M128.4,294h70c6,0,12.1-0.7,18.2-2s11.7-3.7,16.8-7
+														 s9.1-7.7,12.2-13s4.8-11.8,4.8-19.5c0-8.3-2.1-15.1-6.2-20.2s-9.4-9.1-15.8-11.8s-13.2-4.5-20.5-5.5s-14.2-1.5-20.5-1.5h-59V294z"
+														 />
+												 </g>
 											 </g>
-										 </g>
-										</svg>
-									</div> <!-- end letter wrapper -->
+											</svg>
+										</div> <!-- end letter wrapper -->
+									</li>
+								</ul>
+
+								<span class="arrow-down">
+									<svg width="19px" height="10px" viewBox="0 0 19 10" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+											<defs></defs>
+											<g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+													<g id="start-1" transform="translate(-702.000000, -1034.000000)" fill="#FFFFFF">
+															<g id="back" transform="translate(711.500000, 1038.500000) rotate(-90.000000) translate(-711.500000, -1038.500000) translate(706.000000, 1029.000000)">
+																	<g id="Capa_1">
+																			<path d="M1.31004932,9.49950228 L9.85654942,0.918792896 C10.0667418,0.707759208 10.0667418,0.369308954 9.85654942,0.158275266 C9.64635707,-0.052758422 9.30925614,-0.052758422 9.09906379,0.158275266 L0.171837935,9.12123435 C-0.0383544106,9.33226804 -0.0383544106,9.67071829 0.171837935,9.88175198 L9.09906379,18.8407293 C9.20217702,18.9442553 9.34098329,19 9.47582366,19 C9.61066403,19 9.7494703,18.948237 9.85258352,18.8407293 C10.0627759,18.6296956 10.0627759,18.2912454 9.85258352,18.0802117 L1.31004932,9.49950228 L1.31004932,9.49950228 Z" id="Shape"></path>
+																	</g>
+															</g>
+													</g>
+											</g>
+									</svg>
+								</span>
+							</div>
+						</header>
+
+						<article class="case__body">
+
+							<h2>Intro</h2>
+							<p>This booking sytem was built for Malmö stadsteater(MST), Skånes dansteater(STD), Malmö live(ML) & Malmö opera(MO).
+								This was a project in a huge sprint with a goal of redoing all 4 respective websites and launching a new booking system with the Tessitura platform.</p>
+
+							<img data-src="/images/booking/pic.png" alt="intro">
+
+							<h2>My role</h2>
+							<p>I was in charge of the design, UX and frontend as far as HTML / CSS goes. This was a very challenging task with alot of user stories to take into account.</p>
+
+							<img data-src="/images/booking/pic1.png" alt="role">
+
+							<h2>4 Websites - 1 module</h2>
+							<p>One of the key focuses was making a good e-commerce experience on mobile, since the old design wasn't designed for small screens this was a huge blocker regarding sales.
+								We put our focus not only on making it look good, but also making the performance good using the latest web techniques.</p>
+
+							<img class="case__vis" data-src="/images/booking/vis.png" alt="visualize">
+
+							<h2>The solution</h2>
+							<p>I first tried to crack the conundrum on how to have the same design for four visually different sites and still assure the user that they're still on the same site.
+							After testing, we came to the conclusion that a modal that overlays each site is the best way.
+							This also made it alot easier to visually place the Buy tickets button. We didn't want to interfere with the site design at all.
+							An example: A production only has one performance, then the buy tickets could be placed in a different context, e.g. in a slider.
+							The buy ticket shouldn't be dependent on a calendar/table view which lists all performances.</p>
+
+							<ul class="big-pic">
+								<li class="layer" data-depth="-5.00" >
+									<img data-src="/images/booking/b_mock1.png" alt="intro">
 								</li>
 							</ul>
 
-							<span class="arrow-down">
-								<svg width="19px" height="10px" viewBox="0 0 19 10" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-										<defs></defs>
-										<g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
-												<g id="start-1" transform="translate(-702.000000, -1034.000000)" fill="#FFFFFF">
-														<g id="back" transform="translate(711.500000, 1038.500000) rotate(-90.000000) translate(-711.500000, -1038.500000) translate(706.000000, 1029.000000)">
-																<g id="Capa_1">
-																		<path d="M1.31004932,9.49950228 L9.85654942,0.918792896 C10.0667418,0.707759208 10.0667418,0.369308954 9.85654942,0.158275266 C9.64635707,-0.052758422 9.30925614,-0.052758422 9.09906379,0.158275266 L0.171837935,9.12123435 C-0.0383544106,9.33226804 -0.0383544106,9.67071829 0.171837935,9.88175198 L9.09906379,18.8407293 C9.20217702,18.9442553 9.34098329,19 9.47582366,19 C9.61066403,19 9.7494703,18.948237 9.85258352,18.8407293 C10.0627759,18.6296956 10.0627759,18.2912454 9.85258352,18.0802117 L1.31004932,9.49950228 L1.31004932,9.49950228 Z" id="Shape"></path>
-																</g>
-														</g>
-												</g>
-										</g>
-								</svg>
-							</span>
-						</div>
-					</header>
+							<h2>One thing at the time</h2>
+							<p>The problem with internet booking is that the current trend is to give the user so much visual information that the user get's scared.
+							This was solved with the in house term: "One the thing at the time"</p>
 
-					<article class="case__body">
+							<div data-0="opacity:0;" data-1000="opacity:1;">
+								<img class="case__flow" data-src="/images/booking/bitmap.png" alt="booking-one">
+								<img class="case__flow" data-src="/images/booking/bitmap2.png" alt="booking-two">
+								<img class="case__flow" data-src="/images/booking/bitmap3.png" alt="booking-three">
+								<img class="case__flow" data-src="/images/booking/bitmap4.png" alt="booking-four">
+								<img class="case__flow" data-src="/images/booking/bitmap5.png" alt="booking-five">
+							</div>
+							<h2>Semi responsive</h2>
+							<p>The term "mobile booking" would make anyone cringe, but to be able to have intial good responsive booking behaviour was one of the goals for this project.</p>
 
-						<h2>Intro</h2>
-						<p>This booking sytem was built for Malmö stadsteater(MST), Skånes dansteater(STD), Malmö live(ML) & Malmö opera(MO).
-							This was a project in a huge sprint with a goal of redoing all 4 respective websites and launching a new booking system with the Tessitura platform.</p>
-
-						<img data-src="/images/booking/pic.png" alt="intro">
-
-						<h2>My role</h2>
-						<p>I was in charge of the design, UX and frontend as far as HTML / CSS goes. This was a very challenging task with alot of user stories to take into account.</p>
-
-						<img data-src="/images/booking/pic1.png" alt="role">
-
-						<h2>4 Websites - 1 module</h2>
-						<p>One of the key focuses was making a good e-commerce experience on mobile, since the old design wasn't designed for small screens this was a huge blocker regarding sales.
-							We put our focus not only on making it look good, but also making the performance good using the latest web techniques.</p>
-
-						<img class="case__vis" data-src="/images/booking/vis.png" alt="visualize">
-
-						<h2>The solution</h2>
-						<p>I first tried to crack the conundrum on how to have the same design for four visually different sites and still assure the user that they're still on the same site.
-						After testing, we came to the conclusion that a modal that overlays each site is the best way.
-						This also made it alot easier to visually place the Buy tickets button. We didn't want to interfere with the site design at all.
-						An example: A production only has one performance, then the buy tickets could be placed in a different context, e.g. in a slider.
-						The buy ticket shouldn't be dependent on a calendar/table view which lists all performances.</p>
-
-						<ul class="big-pic">
-							<li class="layer" data-depth="-5.00" >
-								<img data-src="/images/booking/b_mock1.png" alt="intro">
-							</li>
-						</ul>
-
-						<h2>One thing at the time</h2>
-						<p>The problem with internet booking is that the current trend is to give the user so much visual information that the user get's scared.
-						This was solved with the in house term: "One the thing at the time"</p>
-
-						<div>
-							<img class="case__flow" data-src="/images/booking/bitmap.png" alt="booking-one">
-							<img class="case__flow" data-src="/images/booking/bitmap2.png" alt="booking-two">
-							<img class="case__flow" data-src="/images/booking/bitmap3.png" alt="booking-three">
-							<img class="case__flow" data-src="/images/booking/bitmap4.png" alt="booking-four">
-							<img class="case__flow" data-src="/images/booking/bitmap5.png" alt="booking-five">
-						</div>
-						<h2>Semi responsive</h2>
-						<p>The term "mobile booking" would make anyone cringe, but to be able to have intial good responsive booking behaviour was one of the goals for this project.</p>
-
-						<img data-src="/images/booking/b_mock2.png" alt="responsive">
-					</article>
+							<img class="last-pic" data-src="/images/booking/b_mock2.png" alt="responsive">
+						</article>
+					</div>
 
 					<footer class="after-case">
 						<nav class="after-case__nav">
@@ -462,6 +469,7 @@
 		<script src='http://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.0/TweenMax.min.js'></script>
 		<script src="/assets/parallax/jquery.parallax.min.js"></script>
 		<script src="/assets/reveal/reveal.js"></script>
+		<script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/ScrollMagic.min.js"></script>
 		<script src="/assets/perfect-scrollbar/js/perfect-scrollbar.jquery.min.js"></script>
 		<script src="dist/js/bundle.js"></script>
 
