Added ze content for all cases

--- a/index.html
+++ b/index.html
@@ -396,18 +396,18 @@
 							<p>This booking sytem was built for Malmö stadsteater(MST), Skånes dansteater(STD), Malmö live(ML) & Malmö opera(MO).
 								This was a project in a huge sprint with a goal of redoing all 4 respective websites and launching a new booking system with the Tessitura platform.</p>
 
-							<img data-src="/images/booking/pic.png" alt="intro">
+							<img class="animate-img" data-src="/images/booking/pic.png" alt="intro">
 
 							<h2>My role</h2>
 							<p>I was in charge of the design, UX and frontend as far as HTML / CSS goes. This was a very challenging task with alot of user stories to take into account.</p>
 
-							<img data-src="/images/booking/pic1.png" alt="role">
+							<img class="animate-img" data-src="/images/booking/pic1.png" alt="role">
 
 							<h2>4 Websites - 1 module</h2>
 							<p>One of the key focuses was making a good e-commerce experience on mobile, since the old design wasn't designed for small screens this was a huge blocker regarding sales.
 								We put our focus not only on making it look good, but also making the performance good using the latest web techniques.</p>
 
-							<img class="case__vis" data-src="/images/booking/vis.png" alt="visualize">
+							<img class="case__vis animate-img" data-src="/images/booking/vis.png" alt="visualize">
 
 							<h2>The solution</h2>
 							<p>I first tried to crack the conundrum on how to have the same design for four visually different sites and still assure the user that they're still on the same site.
@@ -427,16 +427,16 @@
 							This was solved with the in house term: "One the thing at the time"</p>
 
 							<div data-0="opacity:0;" data-1000="opacity:1;">
-								<img class="case__flow" data-src="/images/booking/bitmap.png" alt="booking-one">
-								<img class="case__flow" data-src="/images/booking/bitmap2.png" alt="booking-two">
-								<img class="case__flow" data-src="/images/booking/bitmap3.png" alt="booking-three">
-								<img class="case__flow" data-src="/images/booking/bitmap4.png" alt="booking-four">
-								<img class="case__flow" data-src="/images/booking/bitmap5.png" alt="booking-five">
+								<img class="case__flow animate-img" data-src="/images/booking/bitmap.png" alt="booking-one">
+								<img class="case__flow animate-img" data-src="/images/booking/bitmap2.png" alt="booking-two">
+								<img class="case__flow animate-img" data-src="/images/booking/bitmap3.png" alt="booking-three">
+								<img class="case__flow animate-img" data-src="/images/booking/bitmap4.png" alt="booking-four">
+								<img class="case__flow animate-img" data-src="/images/booking/bitmap5.png" alt="booking-five">
 							</div>
 							<h2>Semi responsive</h2>
 							<p>The term "mobile booking" would make anyone cringe, but to be able to have intial good responsive booking behaviour was one of the goals for this project.</p>
 
-							<img class="last-pic" data-src="/images/booking/b_mock2.png" alt="responsive">
+							<img class="last-pic animate-img" data-src="/images/booking/b_mock2.png" alt="responsive">
 						</article>
 					</div>
 
@@ -444,23 +444,297 @@
 						<nav class="after-case__nav">
 							<h4>What's next?</h4>
 							<li class="after-case__nav__item">
-								<a class="active" href="#">Malmö Opera Group</a>
+								<a class="active" href="#booking-case">Malmö Opera Group</a>
 							</li>
 
 							<li class="after-case__nav__item">
-								<a href="#">Olsson & Gerthel</a>
+								<a href="#og-case">Olsson & Gerthel</a>
 							</li>
 
 							<li class="after-case__nav__item">
-								<a href="#">European Spallation Source</a>
+								<a href="#ess-case">European Spallation Source</a>
 							</li>
 						</nav>
 					</footer>
 				</section>
 
-				<section class="case" id="og-case"></section>
+				<section class="case" id="og-case">
+					<div class="case__wrapper">
+						<header class="case__header">
 
-				<section class="case" id="ess-case"></section>
+							<div class="cases__wrapper">
+
+								<ul class="cases__wrapper__article">
+
+									<li class="layer" data-depth="-1.00">
+										<h3 class="cases__wrapper__article__text cases__wrapper__article__top-left">e-commerce for  <br /> high quality <br /> furniture</h3>
+										<h3 class="cases__wrapper__article__text cases__wrapper__article__bottom-right">e-commerce for  <br /> high quality <br /> furniture</h3>
+									</li>
+
+									<li class="layer layer-index" data-depth="0.50">
+										<h1 class="case__title">Olsson & Gerthel</h1>
+									</li>
+
+									<li class="layer" data-depth="2.00">
+										<div class="letter-wrapper">
+
+											<svg class="letter-wrapper__effect" xmlns="http://www.w3.org/2000/svg" version="1.1">
+												<defs>
+													<filter id="goo">
+														<feGaussianBlur in="SourceGraphic" stdDeviation="10" result="blur" />
+														<feColorMatrix in="blur" mode="matrix" values="1 0 0 0 0  0 1 0 0 0  0 0 1 0 0  0 0 0 19 -9" result="goo" />
+														<feComposite in="SourceGraphic" in2="goo" operator="atop"/>
+													</filter>
+												</defs>
+											</svg>
+											<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+												 viewBox="0 0 376.4 369" style="enable-background:new 0 0 376.4 369;" xml:space="preserve">
+
+												 <g id="og" class="letter-path active">
+
+		 											<defs>
+		 												<pattern patternUnits="userSpaceOnUse" id="image2" x="0%" y="0%" height="100%" width="100%"
+		 																 viewBox="0 0 512 512">
+		 													<image x="-20%" y="0" width="750" height="500" xlink:href="/og.jpg"></image>
+		 												</pattern>
+		 											</defs>
+
+		 											 <g id="start-2" transform="translate(-561.000000, -993.000000)">
+		 												 <g id="case-intro" transform="translate(190.000000, 848.000000)">
+		 													 <g id="letter" transform="translate(371.000000, 145.000000)">
+		 														 <g id="Screen-Shot-2016-10-25-at-11.48.51">
+		 															 <g id="OG">
+
+		 																	 <linearGradient id="path-2_5_" gradientUnits="userSpaceOnUse" x1="-120.2555" y1="584.8385" x2="-121.1656" y2="586.662" gradientTransform="matrix(366.72 0 0 -357.12 44486.5 209424.9688)">
+		 																	 <stop  offset="0" style="stop-color:#F64848"/>
+		 																	 <stop  offset="1" style="stop-color:#F095FF"/>
+		 																 </linearGradient>
+		 																 <path id="path-2_2_" fill="url(#image2)" d="M6,183c0-27.2,4.6-51.8,13.7-73.9s21.8-40.9,38.2-56.4s35.7-27.4,58.1-35.8
+		 																	 s46.9-12.5,73.4-12.5s51,4.2,73.4,12.5s41.8,20.2,58.1,35.8c16.3,15.5,29,34.3,38.2,56.4c9.1,22.1,13.7,46.7,13.7,73.9
+		 																	 s-4.6,51.8-13.7,73.9c-9.1,22.1-21.8,40.9-38.2,56.4c-16.3,15.5-35.7,27.4-58.1,35.8s-46.9,12.5-73.4,12.5s-51-4.2-73.4-12.5
+		 																	 s-41.8-20.2-58.1-35.8s-29-34.3-38.2-56.4S6,210.2,6,183L6,183z M83.8,183c0,16,2.5,30.6,7.4,43.9c5,13.3,12.1,24.8,21.4,34.6
+		 																	 c9.3,9.8,20.4,17.4,33.4,22.8c13,5.4,27.4,8.2,43.4,8.2s30.5-2.7,43.4-8.2c13-5.4,24.1-13,33.4-22.8
+		 																	 c9.3-9.8,16.4-21.3,21.4-34.6S295,199,295,183c0-15.7-2.5-30.2-7.4-43.7s-12.1-25-21.4-34.8c-9.3-9.8-20.4-17.4-33.4-22.8
+		 																	 c-13-5.4-27.4-8.2-43.4-8.2s-30.5,2.7-43.4,8.2c-13,5.4-24.1,13-33.4,22.8s-16.4,21.4-21.4,34.8
+		 																	 C86.2,152.8,83.8,167.3,83.8,183L83.8,183z"/>
+		 															 </g>
+		 														 </g>
+		 													 </g>
+		 												 </g>
+		 											 </g>
+		 										</g>
+											</svg>
+										</div> <!-- end letter wrapper -->
+									</li>
+								</ul>
+
+								<span class="arrow-down">
+									<svg width="19px" height="10px" viewBox="0 0 19 10" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+											<defs></defs>
+											<g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+													<g id="start-1" transform="translate(-702.000000, -1034.000000)" fill="#FFFFFF">
+															<g id="back" transform="translate(711.500000, 1038.500000) rotate(-90.000000) translate(-711.500000, -1038.500000) translate(706.000000, 1029.000000)">
+																	<g id="Capa_1">
+																			<path d="M1.31004932,9.49950228 L9.85654942,0.918792896 C10.0667418,0.707759208 10.0667418,0.369308954 9.85654942,0.158275266 C9.64635707,-0.052758422 9.30925614,-0.052758422 9.09906379,0.158275266 L0.171837935,9.12123435 C-0.0383544106,9.33226804 -0.0383544106,9.67071829 0.171837935,9.88175198 L9.09906379,18.8407293 C9.20217702,18.9442553 9.34098329,19 9.47582366,19 C9.61066403,19 9.7494703,18.948237 9.85258352,18.8407293 C10.0627759,18.6296956 10.0627759,18.2912454 9.85258352,18.0802117 L1.31004932,9.49950228 L1.31004932,9.49950228 Z" id="Shape"></path>
+																	</g>
+															</g>
+													</g>
+											</g>
+									</svg>
+								</span>
+							</div>
+						</header>
+
+						<article class="case__body">
+
+							<h2>Intro</h2>
+							<p>Olsson & Gerthel is an interior design shop that supplies the design interested people across the country with furniture and gifts from prominent suppliers.</p>
+
+							<img class="animate-img" data-src="/images/og/1.jpg" alt="intro">
+
+							<h2>My role</h2>
+							<p>To design and build the front end of an e-commerce site that inspires and showcases the highest quality of interior design.</p>
+
+							<img class="animate-img" data-src="/images/og/2.png" alt="role">
+
+							<h2>Mobile friendly e-commerce</h2>
+							<p>One of the key focuses was making a good e-commerce experience on mobile, since the old design wasn't designed for small screens this was a huge blocker regarding sales.
+								We put our focus not only on making it look good, but also making the performance good using the latest web techniques.</p>
+
+							<img class="case__big animate-img" data-src="/images/og/3.png" alt="visualize">
+
+							<h2>Clear overview</h2>
+							<p>One of the biggest issues to solve was the need of a clear overview, in the e-commerce world, it's fast consumption of content and the user want's a clear overview
+								of all the products. The site features an advanced filter with a nice grid view to showcase the furniture/design item in their right "habitat".</p>
+
+							<div>
+								<img class="case__flow animate-img" data-src="/images/og/4.png" alt="og-one">
+								<img class="case__flow animate-img" data-src="/images/og/5.png" alt="og-two">
+							</div>
+
+							<h2>Product pages with depth</h2>
+							<p>After the user has made their decision to look into a product, it's time to inspire them so they might buy the product. Each product page features a
+								big image displaying the product, below that we feature facts about the product and at the bottom we feature inspiring images.</p>
+							<img class="case__flow animate-img" data-src="/images/og/6.png" alt="og-three">
+
+						</article>
+					</div>
+
+					<footer class="after-case">
+						<nav class="after-case__nav">
+							<h4>What's next?</h4>
+							<li class="after-case__nav__item">
+								<a href="#booking-case">Malmö Opera Group</a>
+							</li>
+
+							<li class="after-case__nav__item">
+								<a class="active" href="#og-case">Olsson & Gerthel</a>
+							</li>
+
+							<li class="after-case__nav__item">
+								<a href="#ess-case">European Spallation Source</a>
+							</li>
+						</nav>
+					</footer>
+				</section>
+
+				<section class="case" id="ess-case">
+					<div class="case__wrapper">
+						<header class="case__header">
+
+							<div class="cases__wrapper">
+
+								<ul class="cases__wrapper__article">
+
+									<li class="layer" data-depth="-1.00">
+										<h3 class="cases__wrapper__article__text cases__wrapper__article__top-left">intranet for the worlds <br /> largest science research <br /> centre</h3>
+										<h3 class="cases__wrapper__article__text cases__wrapper__article__bottom-right">intranet for the worlds <br /> largest science research <br /> centre</h3>
+									</li>
+
+									<li class="layer layer-index" data-depth="0.50">
+										<h1 class="case__title">European Spallation Source</h1>
+									</li>
+
+									<li class="layer" data-depth="2.00">
+										<div class="letter-wrapper">
+
+											<svg class="letter-wrapper__effect" xmlns="http://www.w3.org/2000/svg" version="1.1">
+												<defs>
+													<filter id="goo">
+														<feGaussianBlur in="SourceGraphic" stdDeviation="10" result="blur" />
+														<feColorMatrix in="blur" mode="matrix" values="1 0 0 0 0  0 1 0 0 0  0 0 1 0 0  0 0 0 19 -9" result="goo" />
+														<feComposite in="SourceGraphic" in2="goo" operator="atop"/>
+													</filter>
+												</defs>
+											</svg>
+											<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+												 viewBox="0 0 376.4 369" style="enable-background:new 0 0 376.4 369;" xml:space="preserve">
+
+												 <g id="ess" class="letter-path active">
+
+		 											<defs>
+		 												<pattern patternUnits="userSpaceOnUse" id="image3" x="0%" y="0%" height="100%" width="100%"
+		 																 viewBox="0 0 512 512">
+		 													<image x="-20%" y="0" width="750" height="500" xlink:href="/ess.jpg"></image>
+		 												</pattern>
+		 											</defs>
+
+		 											<g id="start-2_1_" transform="translate(-639.000000, -1725.000000)">
+		 												<g id="case-intro_1_" transform="translate(192.000000, 1570.000000)">
+		 													<g id="letter_1_" transform="translate(447.000000, 155.000000)">
+		 														<g id="Screen-Shot-2016-10-25-at-11.48.51_1_">
+		 															<g id="E">
+		 																<polygon fill="url(#image3)" id="path-2_3_" class="st0" points="74.8,9.5 310.5,9.5 310.5,80.1 151.3,80.1 151.3,144.8 301.7,144.8 301.7,215.3
+		 																	151.3,215.3 151.3,285.9 319.3,285.9 319.3,356.5 74.8,356.5 						"/>
+		 															</g>
+		 														</g>
+		 													</g>
+		 												</g>
+		 											</g>
+		 										</g>
+											</svg>
+										</div> <!-- end letter wrapper -->
+									</li>
+								</ul>
+
+								<span class="arrow-down">
+									<svg width="19px" height="10px" viewBox="0 0 19 10" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+											<defs></defs>
+											<g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+													<g id="start-1" transform="translate(-702.000000, -1034.000000)" fill="#FFFFFF">
+															<g id="back" transform="translate(711.500000, 1038.500000) rotate(-90.000000) translate(-711.500000, -1038.500000) translate(706.000000, 1029.000000)">
+																	<g id="Capa_1">
+																			<path d="M1.31004932,9.49950228 L9.85654942,0.918792896 C10.0667418,0.707759208 10.0667418,0.369308954 9.85654942,0.158275266 C9.64635707,-0.052758422 9.30925614,-0.052758422 9.09906379,0.158275266 L0.171837935,9.12123435 C-0.0383544106,9.33226804 -0.0383544106,9.67071829 0.171837935,9.88175198 L9.09906379,18.8407293 C9.20217702,18.9442553 9.34098329,19 9.47582366,19 C9.61066403,19 9.7494703,18.948237 9.85258352,18.8407293 C10.0627759,18.6296956 10.0627759,18.2912454 9.85258352,18.0802117 L1.31004932,9.49950228 L1.31004932,9.49950228 Z" id="Shape"></path>
+																	</g>
+															</g>
+													</g>
+											</g>
+									</svg>
+								</span>
+							</div>
+						</header>
+
+						<article class="case__body">
+
+							<h2>Intro</h2>
+							<p>The European Spallation Source (ESS) is a multi-disciplinary research centre based on the world’s most powerful neutron source.
+								This new facility will be around 30 times brighter than today's leading facilities,
+								enabling new opportunities for researchers in the fields of life sciences, energy, environmental technology, cultural heritage and fundamental physics.</p>
+
+							<img class="animate-img" data-src="/images/ess/1.jpg" alt="intro">
+
+							<h2>My role</h2>
+							<p>To improve the old intranet with a new clean design that follows the ESS graphical profile.
+								Also to improve the usability and make the consumption of content easier and faster.</p>
+
+							<img class="animate-img" data-src="/images/ess/2.png" alt="role">
+
+							<h2>Mobile overhaul</h2>
+							<p>Making the mobile experience better was very important for this project, and I had an idea of fast and easy content consumption from the start.
+							<br />
+							On a small screen/device the site is split up into sections that is accessible via a small menu at the bottom or via swipe gestures.
+							The main content is always displayed in the middle and the "second" content is displayed to the right & left.</p>
+
+							<img class="case__big animate-img" data-src="/images/ess/3.png" alt="visualize">
+
+							<h2>Never loose context</h2>
+							<p>One of the main problems with the old intranet was the feeling of getting lost. You didn't know where you were and how you got back.
+								Our overhaul ensures that the user always has an easy way of either getting back or consume more content from the groups they are a part of.
+								<br />
+								The header features a useful links section, a search function & a your groups section and tat is always visible.
+								A group activity feed is always being displayed to also show the user what groups they're currently in.</p>
+
+							<div>
+								<img class="case__flow animate-img" data-src="/images/ess/4.png" alt="ess-one">
+								<img class="case__flow animate-img" data-src="/images/ess/5.png" alt="ess-two">
+							</div>
+
+							<h2>Contribution of Content</h2>
+							<p>Contribution of content was also a very big problem that was needed to be solved. We went with a modal solution for
+								this since we didn't want the user to lose the context of where they are. The flow of contributing content is
+								always in a modal, and the post is saved via AJAX.</p>
+							<img class="case__flow animate-img" data-src="/images/ess/6.png" alt="ess-three">
+
+						</article>
+					</div>
+
+					<footer class="after-case">
+						<nav class="after-case__nav">
+							<h4>What's next?</h4>
+							<li class="after-case__nav__item">
+								<a href="#booking-case">Malmö Opera Group</a>
+							</li>
+
+							<li class="after-case__nav__item">
+								<a href="#og-case">Olsson & Gerthel</a>
+							</li>
+
+							<li class="after-case__nav__item">
+								<a class="active" href="#ess-case">European Spallation Source</a>
+							</li>
+						</nav>
+					</footer>
+				</section>
 			</div>
 		</div>
 
@@ -471,6 +745,7 @@
 		<script src="/assets/reveal/reveal.js"></script>
 		<script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/ScrollMagic.min.js"></script>
 		<script src="/assets/perfect-scrollbar/js/perfect-scrollbar.jquery.min.js"></script>
+		<script src="https://unpkg.com/scrollreveal@3.3.2/dist/scrollreveal.min.js"></script>
 		<script src="dist/js/bundle.js"></script>
 
 		<script>
