Minor code cleanup

--- a/index.html
+++ b/index.html
@@ -318,6 +318,7 @@
 					</div>
 				</section>
 
+				<!-- Booking case -->
 				<section class="case" id="booking-case">
 
 					<div class="case__wrapper">
@@ -458,6 +459,7 @@
 					</footer>
 				</section>
 
+				<!-- OG case -->
 				<section class="case" id="og-case">
 					<div class="case__wrapper">
 						<header class="case__header">
@@ -598,6 +600,7 @@
 					</footer>
 				</section>
 
+				<!-- ESS case -->
 				<section class="case" id="ess-case">
 					<div class="case__wrapper">
 						<header class="case__header">
@@ -749,7 +752,7 @@
 		<script src="dist/js/bundle.js"></script>
 
 		<script>
-			// More info https://github.com/hakimel/reveal.js#configuration
+
 			Reveal.initialize({
 				history: false,
 				slideNumber: false,
