--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 
 		<link rel="stylesheet" href="assets/perfect-scrollbar/css/perfect-scrollbar.css">
     <link rel="stylesheet" href="dist/css/main.css">
-		<link rel="shortcut icon" sizes="32x32" type="image/x-icon" href="/graphics/favicon.ico">
+
+		<link rel="shortcut icon" href="/graphics/favicon.ico" type="image/x-icon">
+		<link rel="icon" href="/graphics/favicon.ico" type="image/x-icon">
+
 
 		<link type="text/css" rel="stylesheet" href="//fast.fonts.net/cssapi/44f6deba-4325-4daf-a313-cdabbeae99b8.css"/>
 
@@ -18,7 +21,10 @@
 		<header class="top-bar">
 			<div class="menu-wrapper">
 
-				<button class="menu-btn menu-btn--closed"><span>Me</span><span>nu</span></button>
+				<span class="line"></span>
+
+				<button class="menu-btn menu-btn--toggle"><span>Me</span><span>nu</span></button>
+				<button class="menu-btn menu-btn--hide"><span>H<span class="kern">i</span><span>de</span></button>
 
 			</div>
 
@@ -67,6 +73,35 @@
 				</a>
 			</span>
 		</header>
+
+		<section class="menu">
+			<div class="menu__item" data-color="yellow-red">
+				<div class="menu__item__inner">
+					<a href="#cases">
+						<h2>Cases</h2>
+						<h4>Work that I'm proud of.</h4>
+					</a>
+				</div>
+			</div>
+
+			<div class="menu__item" data-color="blue-purple">
+				<div class="menu__item__inner">
+					<a href="#cv">
+						<h2>CV</h2>
+						<h4>How it all started...</h4>
+					</a>
+				</div>
+			</div>
+
+			<div class="menu__item" data-color="blue-red">
+				<div class="menu__item__inner">
+					<a href="#contact">
+						<h2>Contact</h2>
+						<h4>Get in touch!</h4>
+					</a>
+				</div>
+			</div>
+		</section>
 
 		<div class="reveal">
 			<div class="slides">
@@ -738,6 +773,9 @@
 						</nav>
 					</footer>
 				</section>
+
+				<!-- CV -->
+				<section class="cv" id="cv"></section>
 			</div>
 		</div>
 
