--- a/index.html
+++ b/index.html
@@ -108,6 +108,26 @@
 				<!-- Start section -->
 				<section class="start-section" id="start">
 
+					<button class="mute-btn">
+						<svg width="30px" height="24px" viewBox="0 0 30 24" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+								<defs></defs>
+								<g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+										<g id="start-1" transform="translate(-47.000000, -1014.000000)" fill="#FFFFFF">
+												<g id="speaker" transform="translate(47.000000, 1014.000000)">
+														<g id="Capa_1">
+																<g id="Group">
+																		<path d="M14.202,0.879 C13.7145,0.603 13.1365,0.612 12.657,0.901 C12.634,0.9145 12.612,0.9305 12.592,0.9475 L5.817,6.679 L0.5,6.679 C0.2235,6.679 0,6.9025 0,7.179 L0,16.679 C0,16.812 0.0525,16.939 0.1465,17.0325 C0.2405,17.126 0.367,17.179 0.5,17.179 L5.805,17.1765 L12.5765,23.3965 C12.6015,23.4195 12.6285,23.4395 12.657,23.4565 C12.903,23.605 13.1755,23.6795 13.448,23.6795 C13.7065,23.679 13.9645,23.6125 14.202,23.4785 C14.7015,23.1965 15,22.6815 15,22.1005 L15,2.257 C15,1.6765 14.7015,1.1615 14.202,0.879 L14.202,0.879 Z M14,22.1005 C14,22.316 13.8915,22.5055 13.7105,22.608 C13.633,22.6515 13.4365,22.7355 13.2105,22.621 L6.5,16.4565 L6.5,14.1785 C6.5,13.902 6.2765,13.6785 6,13.6785 C5.7235,13.6785 5.5,13.902 5.5,14.1785 L5.5,16.1765 L1,16.1785 L1,7.6785 L5.5,7.6785 L5.5,9.6785 C5.5,9.955 5.7235,10.1785 6,10.1785 C6.2765,10.1785 6.5,9.955 6.5,9.6785 L6.5,7.4105 L13.2025,1.7405 C13.433,1.6195 13.633,1.7055 13.7105,1.7495 C13.8915,1.852 14,2.0415 14,2.257 L14,22.1005 L14,22.1005 Z" id="Shape"></path>
+																		<path class="stroke" d="M26.013,11.929 C26.013,7.7555 23.355,4.049 19.3985,2.7055 C19.1375,2.617 18.853,2.757 18.764,3.0185 C18.6755,3.2795 18.8155,3.564 19.077,3.653 C22.6275,4.8585 25.013,8.1845 25.013,11.9295 C25.013,15.671 22.632,18.9975 19.0885,20.2065 C18.8275,20.2955 18.6875,20.5795 18.777,20.8415 C18.848,21.049 19.042,21.18 19.25,21.18 C19.3035,21.18 19.358,21.1715 19.4115,21.153 C23.3605,19.8055 26.013,16.099 26.013,11.929 L26.013,11.929 Z" id="Shape"></path>
+																		<path class="stroke" d="M22.2265,0.187 C21.9725,0.0805 21.679,0.1975 21.5705,0.452 C21.463,0.7065 21.5815,1 21.836,1.108 C26.188,2.9545 29,7.2025 29,11.929 C29,16.8175 26.053,21.119 21.4925,22.886 C21.235,22.986 21.107,23.2755 21.207,23.533 C21.2835,23.731 21.473,23.8525 21.6735,23.8525 C21.7335,23.8525 21.7945,23.842 21.854,23.819 C26.8025,21.9005 30,17.2335 30,11.929 C30,6.8 26.9485,2.191 22.2265,0.187 L22.2265,0.187 Z" id="Shape"></path>
+																		<path class="stroke" d="M21.513,11.929 C21.513,8.943 19.5085,6.278 16.6385,5.448 C16.3735,5.3725 16.0965,5.524 16.0195,5.79 C15.943,6.055 16.0955,6.3325 16.3615,6.409 C18.806,7.1155 20.5135,9.3855 20.5135,11.929 C20.5135,14.4725 18.806,16.7425 16.3615,17.449 C16.096,17.5255 15.943,17.803 16.0195,18.068 C16.083,18.287 16.2825,18.4295 16.5,18.4295 C16.546,18.4295 16.5925,18.423 16.6385,18.41 C19.509,17.5795 21.513,14.9145 21.513,11.929 L21.513,11.929 Z" id="Shape"></path>
+																</g>
+														</g>
+												</g>
+										</g>
+								</g>
+						</svg>
+					</button>
+
 					<a href="#cases" class="big-btn big-btn--down">
 						<?xml version="1.0" encoding="UTF-8" standalone="no"?>
 						<svg width="19px" height="10px" viewBox="0 0 19 10" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
@@ -191,26 +211,6 @@
 					<audio id="song" autoplay loop>
 						<source data-src="/music/aphextwin3.mp3" type="audio/mpeg">
 					</audio>
-
-					<button class="mute-btn">
-						<svg width="30px" height="24px" viewBox="0 0 30 24" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-								<defs></defs>
-								<g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
-										<g id="start-1" transform="translate(-47.000000, -1014.000000)" fill="#FFFFFF">
-												<g id="speaker" transform="translate(47.000000, 1014.000000)">
-														<g id="Capa_1">
-																<g id="Group">
-																		<path d="M14.202,0.879 C13.7145,0.603 13.1365,0.612 12.657,0.901 C12.634,0.9145 12.612,0.9305 12.592,0.9475 L5.817,6.679 L0.5,6.679 C0.2235,6.679 0,6.9025 0,7.179 L0,16.679 C0,16.812 0.0525,16.939 0.1465,17.0325 C0.2405,17.126 0.367,17.179 0.5,17.179 L5.805,17.1765 L12.5765,23.3965 C12.6015,23.4195 12.6285,23.4395 12.657,23.4565 C12.903,23.605 13.1755,23.6795 13.448,23.6795 C13.7065,23.679 13.9645,23.6125 14.202,23.4785 C14.7015,23.1965 15,22.6815 15,22.1005 L15,2.257 C15,1.6765 14.7015,1.1615 14.202,0.879 L14.202,0.879 Z M14,22.1005 C14,22.316 13.8915,22.5055 13.7105,22.608 C13.633,22.6515 13.4365,22.7355 13.2105,22.621 L6.5,16.4565 L6.5,14.1785 C6.5,13.902 6.2765,13.6785 6,13.6785 C5.7235,13.6785 5.5,13.902 5.5,14.1785 L5.5,16.1765 L1,16.1785 L1,7.6785 L5.5,7.6785 L5.5,9.6785 C5.5,9.955 5.7235,10.1785 6,10.1785 C6.2765,10.1785 6.5,9.955 6.5,9.6785 L6.5,7.4105 L13.2025,1.7405 C13.433,1.6195 13.633,1.7055 13.7105,1.7495 C13.8915,1.852 14,2.0415 14,2.257 L14,22.1005 L14,22.1005 Z" id="Shape"></path>
-																		<path class="stroke" d="M26.013,11.929 C26.013,7.7555 23.355,4.049 19.3985,2.7055 C19.1375,2.617 18.853,2.757 18.764,3.0185 C18.6755,3.2795 18.8155,3.564 19.077,3.653 C22.6275,4.8585 25.013,8.1845 25.013,11.9295 C25.013,15.671 22.632,18.9975 19.0885,20.2065 C18.8275,20.2955 18.6875,20.5795 18.777,20.8415 C18.848,21.049 19.042,21.18 19.25,21.18 C19.3035,21.18 19.358,21.1715 19.4115,21.153 C23.3605,19.8055 26.013,16.099 26.013,11.929 L26.013,11.929 Z" id="Shape"></path>
-																		<path class="stroke" d="M22.2265,0.187 C21.9725,0.0805 21.679,0.1975 21.5705,0.452 C21.463,0.7065 21.5815,1 21.836,1.108 C26.188,2.9545 29,7.2025 29,11.929 C29,16.8175 26.053,21.119 21.4925,22.886 C21.235,22.986 21.107,23.2755 21.207,23.533 C21.2835,23.731 21.473,23.8525 21.6735,23.8525 C21.7335,23.8525 21.7945,23.842 21.854,23.819 C26.8025,21.9005 30,17.2335 30,11.929 C30,6.8 26.9485,2.191 22.2265,0.187 L22.2265,0.187 Z" id="Shape"></path>
-																		<path class="stroke" d="M21.513,11.929 C21.513,8.943 19.5085,6.278 16.6385,5.448 C16.3735,5.3725 16.0965,5.524 16.0195,5.79 C15.943,6.055 16.0955,6.3325 16.3615,6.409 C18.806,7.1155 20.5135,9.3855 20.5135,11.929 C20.5135,14.4725 18.806,16.7425 16.3615,17.449 C16.096,17.5255 15.943,17.803 16.0195,18.068 C16.083,18.287 16.2825,18.4295 16.5,18.4295 C16.546,18.4295 16.5925,18.423 16.6385,18.41 C19.509,17.5795 21.513,14.9145 21.513,11.929 L21.513,11.929 Z" id="Shape"></path>
-																</g>
-														</g>
-												</g>
-										</g>
-								</g>
-						</svg>
-					</button>
 				</section>
 
 				<!-- Cases section -->
@@ -775,7 +775,123 @@
 				</section>
 
 				<!-- CV -->
-				<section class="cv" id="cv"></section>
+				<section class="cv case" id="cv">
+					<div class="case__wrapper">
+						<header class="case__header">
+
+							<div class="cases__wrapper">
+
+								<ul class="cases__wrapper__article">
+
+									<li class="layer" data-depth="-1.00">
+										<h3 class="cases__wrapper__article__text cases__wrapper__article__top-left">how it all started <br /> and what <br /> i’ve been up to</h3>
+										<h3 class="cases__wrapper__article__text cases__wrapper__article__bottom-right">how it all started <br /> and what <br /> i’ve been up to</h3>
+									</li>
+
+									<li class="layer layer-index" data-depth="0.50">
+										<h1 class="case__title">Curriculum Vitae</h1>
+									</li>
+
+									<li class="layer" data-depth="2.00">
+										<div class="letter-wrapper">
+
+											<svg class="letter-wrapper__effect" xmlns="http://www.w3.org/2000/svg" version="1.1">
+												<defs>
+													<filter id="goo">
+														<feGaussianBlur in="SourceGraphic" stdDeviation="10" result="blur" />
+														<feColorMatrix in="blur" mode="matrix" values="1 0 0 0 0  0 1 0 0 0  0 0 1 0 0  0 0 0 19 -9" result="goo" />
+														<feComposite in="SourceGraphic" in2="goo" operator="atop"/>
+													</filter>
+												</defs>
+											</svg>
+											<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+												 viewBox="0 0 376.4 369" style="enable-background:new 0 0 376.4 369;" xml:space="preserve">
+
+												 <g id="ess" class="letter-path active">
+
+													<defs>
+														<pattern patternUnits="userSpaceOnUse" id="image4" x="0%" y="0%" height="100%" width="100%"
+																		 viewBox="0 0 282 282">
+															<image x="-5%" y="0" width="590" height="460" xlink:href="/cv.jpg"></image>
+														</pattern>
+													</defs>
+
+													<g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+															<g id="cv" transform="translate(-553.000000, -189.000000)" fill="#000000">
+																	<path fill="url(#image4)" d="M802.5253,289.252197 C794.915359,279.987921 785.568507,272.874387 774.484462,267.911382 C763.400418,262.948378 750.579515,260.466912 736.021367,260.466912 C721.46322,260.466912 707.980592,263.27924 695.57308,268.903978 C683.165568,274.528717 672.412552,282.38669 663.31371,292.478134 C654.214867,302.569577 647.101334,314.563325 641.972896,328.459739 C636.844457,342.356152 634.280276,357.410375 634.280276,373.622857 C634.280276,390.166207 636.844457,405.303144 641.972896,419.034124 C647.101334,432.765104 654.132152,444.676137 663.065561,454.767581 C671.998969,464.859024 682.503839,472.716997 694.580484,478.341736 C706.657129,483.966475 719.643464,486.778802 733.539877,486.778802 C749.421493,486.778802 763.483129,483.470182 775.725207,476.852842 C787.967286,470.235502 798.058578,460.971365 805.999386,449.060154 L870.518126,497.20106 C855.629111,518.04568 836.769976,533.430765 813.940154,543.356774 C791.110331,553.282784 767.619127,558.245714 743.465837,558.245714 C716.003877,558.245714 690.692932,553.944508 667.532243,545.341966 C644.371553,536.739424 624.354401,524.414814 607.480184,508.367765 C590.605968,492.320716 577.454202,472.882572 568.024493,450.05275 C558.594784,427.222927 553.88,401.746551 553.88,373.622857 C553.88,345.499163 558.594784,320.022787 568.024493,297.192965 C577.454202,274.363142 590.605968,254.924998 607.480184,238.877949 C624.354401,222.8309 644.371553,210.50629 667.532243,201.903748 C690.692932,193.301206 716.003877,189 743.465837,189 C753.391847,189 763.731285,189.909871 774.484462,191.729639 C785.23764,193.549407 795.825224,196.44445 806.247535,200.414854 C816.669845,204.385258 826.678421,209.67905 836.273564,216.29639 C845.868706,222.91373 854.471119,231.01985 862.08106,240.614992 L802.5253,289.252197 Z" id="C"></path>
+															</g>
+													</g>
+											</svg>
+										</div> <!-- end letter wrapper -->
+									</li>
+								</ul>
+
+
+							</div>
+						</header>
+
+						<article class="cv__body">
+
+							<div class="year">
+
+								<h2 class="year">1993</h2>
+								<h2>Intro</h2>
+								<p>The European Spallation Source (ESS) is a multi-disciplinary research centre based on the world’s most powerful neutron source.
+									This new facility will be around 30 times brighter than today's leading facilities,
+									enabling new opportunities for researchers in the fields of life sciences, energy, environmental technology, cultural heritage and fundamental physics.</p>
+
+								<img class="animate-img cv__image cv__image--right" data-src="/images/ess/1.jpg" alt="intro">
+							</div>
+
+							<div class="year">
+
+								<h2 class="year">2005</h2>
+								<h2>Intro</h2>
+								<p>The European Spallation Source (ESS) is a multi-disciplinary research centre based on the world’s most powerful neutron source.
+									This new facility will be around 30 times brighter than today's leading facilities,
+									enabling new opportunities for researchers in the fields of life sciences, energy, environmental technology, cultural heritage and fundamental physics.</p>
+
+								<img class="animate-img cv__image cv__image--left" data-src="/images/ess/1.jpg" alt="intro">
+							</div>
+
+							<div class="year">
+
+								<h2 class="year">2009</h2>
+								<h2>Intro</h2>
+								<p>The European Spallation Source (ESS) is a multi-disciplinary research centre based on the world’s most powerful neutron source.
+									This new facility will be around 30 times brighter than today's leading facilities,
+									enabling new opportunities for researchers in the fields of life sciences, energy, environmental technology, cultural heritage and fundamental physics.</p>
+
+								<img class="animate-img cv__image cv__image--right" data-src="/images/ess/1.jpg" alt="intro">
+							</div>
+
+							<div class="year">
+
+								<h2 class="year">2012</h2>
+								<h4>Aug 2012 - July 2016</h4>
+								<h2>Intro</h2>
+								<p>The European Spallation Source (ESS) is a multi-disciplinary research centre based on the world’s most powerful neutron source.
+									This new facility will be around 30 times brighter than today's leading facilities,
+									enabling new opportunities for researchers in the fields of life sciences, energy, environmental technology, cultural heritage and fundamental physics.</p>
+
+								<img class="animate-img cv__image cv__image--left" data-src="/images/ess/1.jpg" alt="intro">
+							</div>
+
+							<div class="year">
+
+								<h2 class="year">2016</h2>
+								<h4>July-Aug - September</h4>
+								<h2>Intro</h2>
+								<p>The European Spallation Source (ESS) is a multi-disciplinary research centre based on the world’s most powerful neutron source.
+									This new facility will be around 30 times brighter than today's leading facilities,
+									enabling new opportunities for researchers in the fields of life sciences, energy, environmental technology, cultural heritage and fundamental physics.</p>
+
+								<img class="animate-img cv__image cv__image--left" data-src="/images/ess/1.jpg" alt="intro">
+							</div>
+
+						</article>
+					</div>
+				</section>
 			</div>
 		</div>
 
