--- a/index.html
+++ b/index.html
@@ -849,50 +849,61 @@
 
 								<img class="animate-img cv__image cv__image--right" data-src="/images/cv/1.jpg" alt="one">
 								<h2 class="year-title">1993</h2>
-								<h2>So it begins...</h2>
-								<p>Born in Malmö 15 January 1993 - to a loving father and mother with 3 siblings.</p>
+								<div class="year__inner">
+									<h2>So it begins...</h2>
+									<p>Born in Malmö 15 January 1993 - to a loving father and mother with 3 siblings.</p>
+								</div>
 							</div>
 
 							<div class="year year--left">
 
 								<img class="animate-img cv__image cv__image--left" data-src="/images/cv/2.jpg" alt="two">
 								<h2 class="year-title">2005</h2>
-								<h2>Golden Year</h2>
-								<p>As a child I’ve always been intrested in doing things, more accurate, creative things.
-									Everything from building lego to drawing. 
-									My intreset in websites and digital design started when i was 13 years old when my father showed me frontpage 97,
-									a humble beginning.</p>
+
+									<div class="year__inner">
+									<h2>Golden Year</h2>
+									<p>As a child I’ve always been intrested in doing things, more accurate, creative things.
+										Everything from building lego to drawing. 
+										My intreset in websites and digital design started when i was 13 years old when my father showed me frontpage 97,
+										a humble beginning.</p>
+									</div>
 							</div>
 
 							<div class="year year--right">
 								<img class="animate-img cv__image cv__image--right" data-src="/images/cv/3.jpg" alt="three">
 								<h2 class="year-title">2009</h2>
-								<h2>Dreamin...</h2>
-								<p>Started upper secondary school at age 16
-									with a focus on all things Media.
-									This is where I started to take things more serious.</p>
+								<div class="year__inner">
+									<h2>Dreamin...</h2>
+									<p>Started upper secondary school at age 16
+										with a focus on all things Media.
+										This is where I started to take things more serious.</p>
+								</div>
 							</div>
 
 							<div class="year year--left">
 
 								<img class="animate-img cv__image cv__image--left" data-src="/images/cv/4.jpg" alt="four">
 								<h2 class="year-title">2012</h2>
-								<h4>Aug 2012 - July 2016</h4>
-								<h2>I made it</h2>
-								<p>Right before graduating upper secondary school I landed an intership at Odd Hill.
+								<div class="year__inner">
+									<h4>Aug 2012 - July 2016</h4>
+									<h2>I made it</h2>
+									<p>Right before graduating upper secondary school I landed an intership at Odd Hill.
  									In my role as a designer and developer, I was doing visual design, ui, mock-ups, wire framing,
-									legacy browser testing as well as markup and front end coding using the latest technologies.  </p>
+										legacy browser testing as well as markup and front end coding using the latest technologies.  </p>
 							</div>
 
 							<div class="year year--right">
 
 								<img class="animate-img cv__image cv__image--right" data-src="/images/cv/5.jpg" alt="five">
 								<h2 class="year-title">2016</h2>
-								<h4>July-Aug - September</h4>
-								<h2>Berliner</h2>
-								<p>After 4 years at Odd Hill I started at Ming Labs as a designer.
-									Worked there for ca 3 months - though things didn’t quite work out as I planned I learned a lot.
-									Worked with clients as Dibolt Nixdorf, Luft Hansa etc.</p>
+
+								<div class="year__inner">
+									<h4>July-Aug - September</h4>
+									<h2>Berliner</h2>
+									<p>After 4 years at Odd Hill I started at Ming Labs as a designer.
+										Worked there for ca 3 months - though things didn’t quite work out as I planned I learned a lot.
+										Worked with clients as Dibolt Nixdorf, Luft Hansa etc.</p>
+									</div>
 							</div>
 
 						</article>
