Added contact link mailto

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
 			<div class="menu__item" data-color="blue-red">
 				<div class="menu__item__inner">
-					<a href="#contact">
+					<a href="mailto:anton@ranestam.se">
 						<h2>Contact</h2>
 						<h4>Get in touch!</h4>
 					</a>
@@ -861,11 +861,11 @@
 								<h2 class="year-title">2005</h2>
 
 									<div class="year__inner">
-									<h2>Golden Year</h2>
-									<p>As a child I’ve always been intrested in doing things, more accurate, creative things.
-										Everything from building lego to drawing. 
-										My intreset in websites and digital design started when i was 13 years old when my father showed me frontpage 97,
-										a humble beginning.</p>
+										<h2>Golden Year</h2>
+										<p>As a child I’ve always been intrested in doing things, more accurate, creative things.
+											Everything from building lego to drawing. 
+											My intreset in websites and digital design started when i was 13 years old when my father showed me frontpage 97,
+											a humble beginning.</p>
 									</div>
 							</div>
 
@@ -884,12 +884,12 @@
 
 								<img class="animate-img cv__image cv__image--left" data-src="/images/cv/4.jpg" alt="four">
 								<h2 class="year-title">2012</h2>
-								<div class="year__inner">
-									<h4>Aug 2012 - July 2016</h4>
-									<h2>I made it</h2>
-									<p>Right before graduating upper secondary school I landed an intership at Odd Hill.
- 									In my role as a designer and developer, I was doing visual design, ui, mock-ups, wire framing,
-										legacy browser testing as well as markup and front end coding using the latest technologies.  </p>
+									<div class="year__inner">
+										<h4>Aug 2012 - July 2016</h4>
+										<h2>I made it</h2>
+										<p>Right before graduating upper secondary school I landed an intership at Odd Hill. In my role as a designer and developer, I was doing visual design, ui, mock-ups, wire framing,
+											legacy browser testing as well as markup and front end coding using the latest technologies.  </p>
+									</div>
 							</div>
 
 							<div class="year year--right">
@@ -902,7 +902,7 @@
 									<h2>Berliner</h2>
 									<p>After 4 years at Odd Hill I started at Ming Labs as a designer.
 										Worked there for ca 3 months - though things didn’t quite work out as I planned I learned a lot.
-										Worked with clients as Dibolt Nixdorf, Luft Hansa etc.</p>
+										I Worked with clients as Dibolt Nixdorf, Luft Hansa etc.</p>
 									</div>
 							</div>
 
