--- a/index.html
+++ b/index.html
@@ -10,15 +10,21 @@
 		<link rel="stylesheet" href="assets/perfect-scrollbar/css/perfect-scrollbar.css">
     <link rel="stylesheet" href="dist/css/main.css">
 
-		<link rel="shortcut icon" href="/graphics/favicon.ico" type="image/x-icon">
-		<link rel="icon" href="/graphics/favicon.ico" type="image/x-icon">
+		<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+		<link rel="icon" href="/favicon.ico" type="image/x-icon">
 
 
 		<link type="text/css" rel="stylesheet" href="//fast.fonts.net/cssapi/44f6deba-4325-4daf-a313-cdabbeae99b8.css"/>
 
 	<body style="overflow: hidden;">
 
-		<header class="top-bar">
+		<section class="loader">
+			<svg class="loader_1" xmlns="http://www.w3.org/2000/svg" width="70" height="70" viewBox="-50 -50 244 265"><title>Loader</title><desc>Lines arranged in a circle</desc><g><path class="line_1" stroke-width="2" stroke="#FFF" fill="#FFF" opacity=".9"d="M72.7 0.6L72.7 0.6C74.8 0.6 76.4 2.4 76.4 4.6L76.4 36.6C76.4 38.8 74.8 40.6 72.7 40.6 70.7 40.6 69.1 38.8 69.1 36.6L69.1 4.6C69.1 2.4 70.7 0.6 72.7 0.6"/><path class="line_2" stroke-width="2" stroke="#FFF" opacity="0.8" fill="#FFF" d="M137.8 40.6C137.1 40.6 136.4 40.8 135.7 41.2L107.5 58.2C105.6 59.4 104.9 62 106 64 106.8 65.3 108.1 66.1 109.6 66.1 110.2 66.1 110.9 65.9 111.6 65.5L139.8 48.5C141.8 47.4 142.4 44.8 141.3 42.7 140.6 41.4 139.2 40.6 137.8 40.6"/><path class="line_3" stroke-width: "2" stroke="#FFF" opacity="0.6" fill="#FFF" d="M109.6 102.5C108.1 102.5 106.8 103.3 106 104.6 104.9 106.7 105.6 109.3 107.5 110.5L135.7 127.4C136.4 127.8 137.1 128 137.8 128 139.2 128 140.6 127.3 141.3 125.9 142.4 123.9 141.8 121.3 139.8 120.1L111.6 103.1C110.9 102.7 110.2 102.5 109.6 102.5"/><path class="line_4" stroke-width="2" stroke="#FFF" opacity="0.6" fill="#FFF" d="M72.7 124.4C70.7 124.4 69.1 126.2 69.1 128.4L69.1 160.4C69.1 162.6 70.7 164.4 72.7 164.4 74.8 164.4 76.4 162.6 76.4 160.4L76.4 128.4C76.4 126.2 74.8 124.4 72.7 124.4"/><path class="line_5" stroke-width="2" stroke="#FFF" opacity="0.4" fill="#FFF" d="M32.3 102.5C31.6 102.5 30.9 102.7 30.3 103.1L2 120.1C0.1 121.3-0.6 123.9 0.5 125.9 1.3 127.3 2.7 128 4.1 128 4.8 128 5.5 127.8 6.1 127.4L34.3 110.5C36.3 109.3 37 106.7 35.8 104.6 35.1 103.3 33.7 102.5 32.3 102.5"/><path class="line_6" stroke-width="2" stroke="#FFF" opacity="0.2" fill="#FFF" d="M4.1 40.6C2.7 40.6 1.3 41.4 0.5 42.7 -0.6 44.8 0.1 47.4 2 48.5L30.3 65.5C30.9 65.9 31.6 66.1 32.3 66.1 33.7 66.1 35.1 65.3 35.8 64 37 62 36.3 59.4 34.3 58.2L6.1 41.2C5.5 40.8 4.8 40.6 4.1 40.6"/></g></svg>
+			<p>Loading ze stuff for you</p>
+		</section>
+
+		<div class="loaded">
+			<header class="top-bar">
 			<div class="menu-wrapper">
 
 				<span class="line"></span>
@@ -74,7 +80,7 @@
 			</span>
 		</header>
 
-		<section class="menu">
+			<section class="menu">
 			<div class="menu__item" data-color="yellow-red">
 				<div class="menu__item__inner">
 					<a href="#cases">
@@ -103,7 +109,7 @@
 			</div>
 		</section>
 
-		<div class="reveal">
+			<div class="reveal">
 			<div class="slides">
 				<!-- Start section -->
 				<section class="start-section" id="start">
@@ -208,7 +214,7 @@
 						</li>
 					</ul>
 
-					<audio id="song" autoplay loop>
+					<audio id="song" loop>
 						<source data-src="/music/aphextwin3.mp3" type="audio/mpeg">
 					</audio>
 				</section>
@@ -888,7 +894,7 @@
 										<h4>Aug 2012 - July 2016</h4>
 										<h2>I made it</h2>
 										<p>Right before graduating upper secondary school I landed an intership at Odd Hill. In my role as a designer and developer, I was doing visual design, ui, mock-ups, wire framing,
-											legacy browser testing as well as markup and front end coding using the latest technologies.  </p>
+											legacy browser testing as well as markup and front end coding using the latest technologies. Worked with clients like Malmö FF, Tetrapak, Zlatan Ibrahimovic etc  </p>
 									</div>
 							</div>
 
@@ -905,8 +911,11 @@
 										I Worked with clients as Dibolt Nixdorf, Luft Hansa etc.</p>
 									</div>
 							</div>
-
 						</article>
+
+						<div class="cv__links">
+							<a href="https://www.linkedin.com/in/anton-ranestam-75343218" target="_blank">Linkedin</a>
+						</div>
 					</div>
 
 					<footer class="after-case">
@@ -928,8 +937,9 @@
 				</section>
 			</div>
 		</div>
-
+		</div>
 		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+		<script src="assets/imagesloaded/imagesloaded.pkgd.min.js"></script>
 		<script src="assets/modernizr/modernizr.js"></script>
 		<script src='http://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.0/TweenMax.min.js'></script>
 		<script src="/assets/parallax/jquery.parallax.min.js"></script>
