--- a/public/index.html
+++ b/public/index.html
@@ -260,7 +260,7 @@
 							</li>
 
 							<li class="layer" data-depth="2.00">
-								<div class="letter-wrapper">
+								<div class="letter-wrapper booking-bg">
 									<svg class="letter-wrapper__effect" xmlns="http://www.w3.org/2000/svg" version="1.1">
 									  <defs>
 									    <filter id="goo">
@@ -277,7 +277,7 @@
 										 <defs>
 											 <pattern patternUnits="userSpaceOnUse" id="image" x="0%" y="0%" height="100%" width="100%"
 																viewBox="0 0 512 512">
-												 <image x="-90%" y="-1%" width="830" height="500" xlink:href="/images/svg/orkester.jpg"></image>
+												 <image x="-90%" y="-1%" width="830" height="500" xlink:href="images/svg/orkester.jpg"></image>
 											 </pattern>
 										 </defs>
 										 <g id="Mask">
@@ -296,7 +296,7 @@
 											<defs>
 												<pattern patternUnits="userSpaceOnUse" id="image2" x="0%" y="0%" height="100%" width="100%"
 																 viewBox="0 0 512 512">
-													<image x="-20%" y="0" width="750" height="500" xlink:href="/images/svg/og.jpg"></image>
+													<image x="-20%" y="0" width="750" height="500" xlink:href="images/svg/og.jpg"></image>
 												</pattern>
 											</defs>
 
@@ -330,7 +330,7 @@
 											<defs>
 												<pattern patternUnits="userSpaceOnUse" id="image3" x="0%" y="0%" height="100%" width="100%"
 																 viewBox="0 0 512 512">
-													<image x="-20%" y="0" width="750" height="500" xlink:href="/images/svg/ess.jpg"></image>
+													<image x="-20%" y="0" width="750" height="500" xlink:href="images/svg/ess.jpg"></image>
 												</pattern>
 											</defs>
 
@@ -380,7 +380,7 @@
 									</li>
 
 									<li class="layer" data-depth="2.00">
-										<div class="letter-wrapper">
+										<div class="letter-wrapper booking-bg">
 
 											<svg class="letter-wrapper__effect" xmlns="http://www.w3.org/2000/svg" version="1.1">
 												<defs>
@@ -520,7 +520,7 @@
 									</li>
 
 									<li class="layer" data-depth="2.00">
-										<div class="letter-wrapper">
+										<div class="letter-wrapper og-bg">
 
 											<svg class="letter-wrapper__effect" xmlns="http://www.w3.org/2000/svg" version="1.1">
 												<defs>
@@ -661,7 +661,7 @@
 									</li>
 
 									<li class="layer" data-depth="2.00">
-										<div class="letter-wrapper">
+										<div class="letter-wrapper ess-bg">
 
 											<svg class="letter-wrapper__effect" xmlns="http://www.w3.org/2000/svg" version="1.1">
 												<defs>
@@ -800,7 +800,7 @@
 									</li>
 
 									<li class="layer" data-depth="2.00">
-										<div class="letter-wrapper">
+										<div class="letter-wrapper cv-bg">
 
 											<svg class="letter-wrapper__effect" xmlns="http://www.w3.org/2000/svg" version="1.1">
 												<defs>
@@ -923,7 +923,7 @@
 						<nav class="after-case__nav">
 							<h4>What's next?</h4>
 							<li class="after-case__nav__item">
-								<a class="active" href="#booking-case">Malmö Opera Group</a>
+								<a href="#booking-case">Malmö Opera Group</a>
 							</li>
 
 							<li class="after-case__nav__item">
@@ -943,10 +943,10 @@
 		<script src="assets/imagesloaded/imagesloaded.pkgd.min.js"></script>
 		<script src="assets/modernizr/modernizr.js"></script>
 		<script src='http://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.0/TweenMax.min.js'></script>
-		<script src="/assets/parallax/jquery.parallax.min.js"></script>
-		<script src="/assets/reveal/reveal.js"></script>
+		<script src="assets/parallax/jquery.parallax.min.js"></script>
+		<script src="assets/reveal/reveal.js"></script>
 		<script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/ScrollMagic.min.js"></script>
-		<script src="/assets/perfect-scrollbar/js/perfect-scrollbar.jquery.min.js"></script>
+		<script src="assets/perfect-scrollbar/js/perfect-scrollbar.jquery.min.js"></script>
 		<script src="https://unpkg.com/scrollreveal@3.3.2/dist/scrollreveal.min.js"></script>
 		<script src="dist/js/bundle.js"></script>
 
