First step in making slider cases adjusted for mousewheel

--- a/public/index.html
+++ b/public/index.html
@@ -947,6 +947,7 @@
 		<script src="assets/reveal/reveal.js"></script>
 		<script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/ScrollMagic.min.js"></script>
 		<script src="assets/perfect-scrollbar/js/perfect-scrollbar.jquery.min.js"></script>
+		<script src="assets/mousewheel/jquery.mousewheel.min.js"></script>
 		<script src="https://unpkg.com/scrollreveal@3.3.2/dist/scrollreveal.min.js"></script>
 		<script src="dist/js/bundle.js"></script>
 
